--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ cycler==0.10.0
 dj-database-url==0.5.0
 Django==2.1.5
 django-heroku==0.3.1
+gunicorn==19.9.0
 kiwisolver==1.0.1
 matplotlib==3.0.2
 music21==5.5.0
